k8s/03-postgres-statefulset.yaml
#---------------------------------------------------------
## Postgres-db StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: banking
spec:
  serviceName: postgres-db
  replicas: 2
  selector:
    matchLabels:
      app: postgres-db
  podManagementPolicy: OrderedReady
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path-retain
        resources:
          requests:
            storage: 5Gi
#---------------------------------------------------------
## pod template
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
#---------------------------------------------------------
## pod Security 
# official postgres:15-alpine image uses UID 70
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
#---------------------------------------------------------
## Init Container
      containers:
        - name: postgres
          image: postgres:15-alpine
          command: ["/scripts/init.sh"]
          volumeMounts:
            - name: init-script
              mountPath: /scripts
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "300Mi"
              cpu: "150m"
            limits:
              memory: "768Mi"
              cpu: "1000m"       
          securityContext:
            capabilities:
              drop:
                - ALL
#---------------------------------------------------------  
## Probes
          startupProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            failureThreshold: 20
            periodSeconds: 5       # 20x5s = 100s max to start

          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
#---------------------------------------------------------
## environment variables
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - high-memory
        # ── make sure that every pod runs on a differant node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - postgres-db
              topologyKey: kubernetes.io/hostname

      tolerations:
        - key: database-only
          operator: Equal
          value: "true"
          effect: NoSchedule
#---------------------------------------------------------
## configMap volumes
      volumes:
        - name: init-script
          configMap:
            name: postgres-setup-script
            defaultMode: 0755      # makes init.sh executable
#---------------------------------------------------------
