k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: banking.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: banking-api-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-dashboard-service
                port:
                  number: 80
